--- a/arch/arm/boot/dts/nuvoton-npcm750-runbmc-olympus.dts
+++ b/arch/arm/boot/dts/nuvoton-npcm750-runbmc-olympus.dts
@@ -116,6 +116,7 @@
 		#size-cells = <1>;
 		reg = <0>;
 		spi-rx-bus-width = <2>;
+		spi-tx-bus-width = <2>;
 
 		partitions@80000000 {
 			compatible = "fixed-partitions";
@@ -154,7 +155,8 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		reg = <1>;
-		npcm,fiu-rx-bus-width = <2>;
+		spi-rx-bus-width = <2>;
+		spi-tx-bus-width = <2>;
 
 		partitions@88000000 {
 			compatible = "fixed-partitions";
@@ -182,6 +184,7 @@
 		#size-cells = <1>;
 		reg = <0>;
 		spi-rx-bus-width = <2>;
+		spi-tx-bus-width = <2>;
 
 		partitions@A0000000 {
 			compatible = "fixed-partitions";
