--- a/arch/arm/boot/dts/nuvoton-npcm750-buv-runbmc.dts
+++ b/arch/arm/boot/dts/nuvoton-npcm750-buv-runbmc.dts
@@ -324,7 +324,7 @@
 	clock-frequency = <100000>;
 	status = "okay";
 	npcm7xx-ssif-bmc@40000010 {
-		compatible = "nuvoton,npcm7xx-ssif-bmc";
+		compatible = "ssif-bmc";
 		reg = <0x40000010>;
 	};
 };
